# light-wizard

./: .gitignore  Cargo.toml  README.md  build.rs  light-wizard.example.toml
src/: cli.rs  color_cycle.rs  config.rs  input_reactive.rs  main.rs  visualizer.rs  wiz.rs  wizard.rs
src/audio/: macos.rs  mod.rs  player.rs
