[package]
name = "light-wizard"
version = "0.1.0"
edition = "2024"
description = "A synchronized system-audio and file visualizer for WiZ lights"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
ctrlc = "3"
if-addrs = "0.15"
rustfft = "6.4"
rodio = { version = "0.22", default-features = false, features = ["playback", "mp3", "flac", "wav", "vorbis", "mp4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
symphonia = { version = "0.5.5", default-features = false, features = ["ogg"] }
symphonia-adapter-libopus = "0.2.9"
toml = "1.1"

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = { version = "8", features = ["macos_13_0"] }
